[gd_scene load_steps=2 format=3 uid="uid://cyqami4ya0bmw"]

[ext_resource type="Script" uid="uid://bklg0cntdx0cn" path="res://Menus/main_menu.gd" id="1_jf8mj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jf8mj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="GameTitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Any Indie Horror Game"
horizontal_alignment = 1

[node name="MainLinks" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/MainLinks"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer/MainLinks"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer/MainLinks"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Credits
"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/MainLinks"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="CenterContainer/VBoxContainer/MainLinks/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainLinks/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainLinks/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainLinks/QuitButton" to="." method="_on_quit_button_pressed"]
